--- a/spring-cloud-contract-tools/pom.xml
+++ b/spring-cloud-contract-tools/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-contract-parent</artifactId>
-		<version>2.1.0.BUILD-SNAPSHOT</version>
+		<version>2.1.1-S</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -18,9 +18,9 @@
 	<description>Spring Cloud Contract Tools</description>
 
 	<modules>
+	
 		<module>spring-cloud-contract-converters</module>
 		<module>spring-cloud-contract-pact</module>
-		<module>spring-cloud-contract-maven-plugin</module>
 		<module>spring-cloud-contract-gradle-plugin</module>
 	</modules>
 
