--- a/spring-cloud-contract-tools/spring-cloud-contract-maven-plugin/pom.xml
+++ b/spring-cloud-contract-tools/spring-cloud-contract-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-contract-tools</artifactId>
-		<version>2.1.0.BUILD-SNAPSHOT</version>
+		<version>2.1.1-S</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -217,15 +217,15 @@
 				<reportSets>
 					<reportSet>
 						<reports>
-							<report>ci-management</report>
+							<report>cim</report>
 							<report>help</report>
 							<report>index</report>
-							<report>issue-management</report>
-							<report>licenses</report>
+							<report>issue-tracking</report>
+							<report>license</report>
 							<report>modules</report>
 							<report>plugin-management</report>
 							<report>plugins</report>
-							<report>team</report>
+							<report>project-team</report>
 							<report>scm</report>
 							<report>summary</report>
 						</reports>
