--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 	<artifactId>spring-cloud-contract-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>2.1.1-S</version>
+	<version>2.1.1-T</version>
 
 	<name>Spring Cloud Contract</name>
 	<description>Spring Cloud Contract</description>
