--- a/spring-cloud-contract-verifier/pom.xml
+++ b/spring-cloud-contract-verifier/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-contract-parent</artifactId>
-		<version>2.1.1-S</version>
+		<version>2.1.1-T</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>spring-cloud-contract-verifier</artifactId>
@@ -186,6 +186,12 @@
 			<groupId>javax.ws.rs</groupId>
 			<version>2.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.apache.camel</groupId>
+		    <artifactId>camel-spring-boot</artifactId>
+		    <version>2.23.0</version>
 		</dependency>
 	</dependencies>
 	<build>
